--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "polymer": "polymer/polymer#~0.3.5",
     "polymer-test-tools": "Polymer/polymer-test-tools#~0.3.5",
-    "bootstrap": "~3.2.0",
+    "bootstrap": "3.x",
     "core-collapse": "polymer/core-collapse#~0.3.5"
   }
 }
